--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -30,8 +30,10 @@
 			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
 		</p>
 		<section>
-			<button id="editVenue" onclick="editVenue(event)" class="btn btn-primary btn-lg" style="margin: 0 20px;"
-			  data-id="{{ venue.id }}">Edit</button>
+			<a href="/venues/{{ venue.id }}/edit">
+				<button id="editVenue" onclick="editVenue(event)" class="btn btn-primary btn-lg" style="margin: 0 20px;"
+				data-id="{{ venue.id }}">Edit</button>
+			</a>
 			<button id="deleteVenue" onclick="deleteVenue(event)" class="btn btn-primary btn-lg"
 			  data-id="{{ venue.id }}">Delete</button>
 		</section>
